# iris

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  justfile  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
crates/iris/: Cargo.toml
crates/iris_ecma/: Cargo.toml
crates/iris_ecma/src/: characterization.rs  generalization.rs  lib.rs  lower.rs  traverse.rs
crates/iris_integrated/: Cargo.toml
crates/iris_integrated/src/: lib.rs
crates/iris_integrated_test/: Cargo.toml
crates/iris_integrated_test/src/: lib.rs
crates/iris_integrated_test/src/integrated/: mod.rs
crates/iris_integrated_test/src/integrated/ecma2py/: mod.rs
crates/iris_integrated_test/src/shared/: tester.rs
crates/iris_low_level_ir/: Cargo.toml
crates/iris_low_level_ir/src/: lib.rs
crates/iris_low_level_ir/src/shared/: assignment.rs  atom.rs  declarations.rs  derivatives.rs  expressions.rs  literals.rs  mod.rs  module_declarations.rs  operator.rs  program.rs  span.rs  statements.rs
crates/iris_python/: Cargo.toml
crates/iris_python/src/: characterization.rs  generalization.rs  lib.rs
crates/iris_python_ir/: Cargo.toml
crates/iris_python_toolchain/: Cargo.toml
crates/iris_python_toolchain/src/: lib.rs
crates/ruff/: Cargo.toml
crates/ruff/src/: lib.rs
runtime/ecma/python/: binary.ts
runtime/ecma/test/: binary.test.ts
runtime/python/ecma/: comparison.py
