[workspace]
resolver = "2"
members = ["crates/*"]


[workspace.package]
authors = ["Ethan Goh <7086cmd@gmail.com>"]
categories = ["code-translation", "universal-code"]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
oxc = { version = "0.38.0", features = ["transformer", "parser", "codegen"] }
ruff = { git = "https://github.com/astral-sh/ruff.git", rev = "9e017634cba215ac1ad0c6cb395f40cfbf7e3d9d" }
serde = "1.0.215"
tokio = { version = "1.41.1", features = ["full"] }
serde_json = "1.0.133"
tsify = "0.4.5"
syn = "2.0.90"
proc-macro2 = "1.0.92"
