[workspace]
resolver = "2"
members = ["crates/*"]


[workspace.package]
authors = ["Ethan Goh <7086cmd@gmail.com>"]
categories = ["code-translation", "universal-code"]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
oxc = { version = "0.41.0", features = ["full"] }
oxc_resolver = "3.0.3"
oxc_traverse = "0.41.0"
oxc_ecmascript = "0.41.0"
oxc_index = "2.0.0"
# Ruff does not appear in crates.io, but we need to use it for parse/codegen
anyhow = "1.0.94"
nonmax = "0.5.5"
either = "1.13.0"
serde = "1.0.215"
tokio = { version = "1.41.1", features = ["full"] }
serde_json = "1.0.133"
tsify = "0.4.5"
syn = "2.0.90"
proc-macro2 = "1.0.92"
compact_str = "0.8.0"

iris_python = { path = "crates/iris_python" }
iris_ecma = { path = "crates/iris_ecma" }
iris_low_level_ir = { path = "crates/iris_low_level_ir" }

ruff = { path = "crates/ruff"}

iris_integrated_test = { path = "crates/iris_integrated_test" }
